fix: about me (links), project (+gap), portfolio (+gap) layouts

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -20,6 +20,7 @@
 .aboutme__info {
   display: flex;
   flex-direction: row;
+  gap: 50px;
   justify-content: space-between;
   padding: 66px 0 100px;
 }
