--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,10 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
+
+  max-width: 100vw;
   min-width: 320px;
+  min-height: 100vh;
 
   margin: 0 auto;
   padding: 0px 70px 20px;
